--- a/gb/24/12/14/n14391071.md
+++ b/gb/24/12/14/n14391071.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>产能过剩 物价跌不停 中国经济陷恶性循环</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/12/id14390325-GettyImages-2187872039-600x400.jpg" />
-<h6>产能过剩、物价跌不停之际，中国经济陷恶性循环。资料图：2024年12月6日傍晚，北京街道上行驶的汽车。(Greg Baker/AFP via Getty Images)
-</h6>
+<h6>产能过剩、物价跌不停之际，中国经济陷恶性循环。资料图：2024年12月6日傍晚，北京街道上行驶的汽车。(Greg Baker/AFP via Getty Images)</h6>
 <hr>
 	<p>【大纪元2024年12月15日讯】（大纪元记者李言编译报导）中国生产的各类商品都陷产能过剩，纸类产品也在其中。《华尔街日报》报导说，面对这一危机，中国最大的造纸商之一——山东晨鸣纸业采取了与其它公司一样的做法：降价清仓。然而，公司亏损却不断增加。</p>
 <p>上个月，该公司表示，其逾期债务已达2.5亿美元左右。据称，债权人提起诉讼，公司部分银行账户被冻结。</p>
@@ -22,35 +21,41 @@
 <p>其它行业也出现类似情况。中国电动车公司蔚来汽车执行长李斌在9月与分析师的电话会议上表示，中国内燃机汽车制造商已经进入降价的“不可持续循环（恶性循环）”，这损害了利润。而中国的汽车产量仍在持续增长。</p>
 <p>野村证券（Nomura Securities）预计中国的生产者物价指数将下降1.2%，而麦格理预计2025年将下降1%。</p>
 <p>责任编辑：林妍#</p>
-	
+<div class="related-article" style="display: block;"><span style="color: #000;font-weight:bold;">推荐阅读：</span></div>
+<ul class="related-posts"style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/24/n14337656.md#1" target="_blank" rel="noopener">外媒揭中共公布大型经济刺激措施内幕</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14332880.md#1" target="_blank" rel="noopener">中国金融业现5不祥之兆 专家：最惨情况还未到</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345627.md#1" target="_blank" rel="noopener">中国经济大萧条 大量实体店十一门庭冷落</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/23/n14275680.md#1" target="_blank" rel="noopener">【名家专栏】中国制造业产能过剩损害经济</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/10/24/n14357087.md#1" target="_blank" rel="noopener">东莞显衰败 商铺成排成片倒闭 内卷严重</a></span></li>
+</ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367240.md#1">川普重返白宫 外企加速撤离中国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378507.md#1">IPO冻结 投资人施压 中国初创企业难以招架</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/29/n14381626.md#1">中共地方政府扣薪填补财政缺口 引发抗议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384527.md#1">调查：德企对中国市场信心跌至历史新低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/11/n11646873.md#1" target="_blank">中共暴政录：最奇葩的战争——战胜国送出国土</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/18/n11329746.md#1" target="_blank">传奇总统里根（10）：一封家书承载使命</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/1/n11424700.md#1" target="_blank">罗兰：中共公安何以成公害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386541.md#1">格鲁吉亚发现神秘石板 或蕴含失落语言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387166.md#1">美国护士称见到2米高的死神逼近临终病人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387684.md#1">【未解之谜】孙中山转世？河南奇人张四目之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/13/n13642953.md#1">叹武训</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387867.md#1">如何把坏事变好事？谈随遇而安</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390708.md#1">【新闻大破解】美军反制 共军围岛不敢说演习</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390711.md#1">【未解之谜】蕴含地外元素可自主移动？贝茨球之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390744.md#1">【军事情报局】血战库尔斯克 俄军损失90战车</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389267.md#1">传中共拟允许人民币大幅贬值 专家析利弊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389628.md#1">海关署长俞建华猝死 其靠山被指是丁薛祥</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389618.md#1">【内幕】惧美国制裁 中共跨国镇压密令曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389389.md#1">高圆圆素颜带娃外出骑车 一细节获赞温馨有爱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389328.md#1">孙俪自曝13岁儿子用身体帮她挡车 网友大赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390069.md#1">贾静雯素颜冻龄惊艳 海关人员查看护照惊呆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390043.md#1">开跑车随手丢烟头 《庆余年》主演张若昀惹议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389297.md#1">破香港影史纪录 《破·地狱》登港片票房冠军</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389057.md#1">用荷兰锅煮饭 停电也不担心 一锅到底营养更全面</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14383980.md#1">吃米饭同样可控糖  比生酮饮食更永续更安全</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389408.md#1">为什么不该用微波炉泡茶？ 泡好茶三技巧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389513.md#1">开卷真的有益 擅长阅读者大脑结构不同</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390257.md#1">在冬天真的比较容易罹患感冒吗？ 专家释疑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652050.md#1">【直播】听证会：中共在拉丁美洲的组织犯罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/14/n14391071.htm">产能过剩 物价跌不停 中国经济陷恶性循环</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391071.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
