--- a/gb/24/12/18/n14393701.md
+++ b/gb/24/12/18/n14393701.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>特斯拉中国工厂负责人宋钢被报离职</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/12/id14393706-GettyImages-1156009061-600x400.jpg" />
-<h6>图为2019年7月16日，特斯拉在上海的工厂建设情况。(AFP via Getty Images)
-</h6>
+<h6>图为2019年7月16日，特斯拉在上海的工厂建设情况。(AFP via Getty Images)</h6>
 <hr>
 	<p>【大纪元2024年12月19日讯】（大纪元记者李净综合报导）美国电动车巨头特斯拉在中国的工厂——特斯拉（上海）有限公司特斯拉上海超级工厂生产制造副总裁宋钢，据报将于本周离职。而陆媒分析称，宋钢离职或是被中国本土车企“挖角”。</p>
 <p>彭博社周三（12月18日）引述知情人士透露，负责特斯拉上海工厂建设的宋钢将于本周离职。</p>
@@ -16,38 +15,46 @@
 <p>据腾讯网刊登微信公众号“晚点Auto”的独家报导，特斯拉制造副总裁、上海工厂厂长宋钢数月前已提交辞呈，12月18日是他的最后工作日期。两位知情人士表示，宋钢计划加入一家目前正处在产能瓶颈的本土新兴汽车品牌。</p>
 <p>两位知情人士说，最有可能接替宋钢的是特斯拉上海工厂汽车与零件质量高级总监费文进。另一位候选人是特斯拉上海工厂现任物流总监孙郝林。</p>
 <p>而界面新闻分析称，特斯拉建厂元老宋钢离职或被中国本土车企“挖角”。</p>
-<figure id="attachment_14393707" aria-describedby="caption-attachment-14393707" style="width: 295px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14393707-648c81045c2953b36e0894ec90a2b76e-e1734555767231.jpg"><img decoding="async" class=" wp-image-14393707" src="https://i.epochtimes.com/assets/uploads/2024/12/id14393707-648c81045c2953b36e0894ec90a2b76e-e1734555767231.jpg" alt="" width="295" b="226" /></a><figcaption id="caption-attachment-14393707" class="wp-caption-text">（网页截图）</figcaption></figure>
+<figure id="attachment_14393707" aria-describedby="caption-attachment-14393707" style="width: 295px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14393707-648c81045c2953b36e0894ec90a2b76e-e1734555767231.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14393707" src="https://i.epochtimes.com/assets/uploads/2024/12/id14393707-648c81045c2953b36e0894ec90a2b76e-e1734555767231.jpg" alt="" width="295" b="226"></a><figcaption id="caption-attachment-14393707" class="wp-caption-text">（网页截图）</figcaption></figure>
 <p>据悉，上海工厂厂长是特斯拉中国除朱晓彤外最关键的职位，统管上海工厂一期、二期，以及电池、电机的工厂。特斯拉中国除了供应链归美国总部管，其余制造相关部门均由工厂厂长管理。</p>
-<p>责任编辑：李宇圆#</p>
-	
+<p>责任编辑：李宇圆#
+</p>
+<div class="related-article"><span style="color: #000;font-weight:bold">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff">
+<li><span style="font-weight:bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384572.md#1" target="_blank" rel="noopener nofollow noreferrer">中共地方补贴造车新势力 10年留下千亿烂尾</a></span></li>
+<li><span style="font-weight:bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/9/n14267072.md#1" target="_blank" rel="noopener nofollow noreferrer">中国车企巨头：内卷无穷尽 价格战致造假</a></span></li>
+<li><span style="font-weight:bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322325.md#1" target="_blank" rel="noopener nofollow noreferrer">中共对电动车低价倾销 分析：损人不利己</a></span></li>
+<li><span style="font-weight:bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/4/23/n14232527.md#1" target="_blank" rel="noopener nofollow noreferrer">新能源车供过于求文章被删 专家析产业困境</a></span></li>
+<li><span style="font-weight:bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315430.md#1" target="_blank" rel="noopener nofollow noreferrer">中国汽车经销商亏损面扩大 中共补贴被稀释</a></span></li>
+</ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/18/n14228348.md#1">特斯拉中国裁员 个别部门或裁50%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/7/n14243134.md#1">特斯拉中国制造电动汽车4月销量同比下降18%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264107.md#1">特斯拉中国工厂5月出口量同比再下降</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282355.md#1">特斯拉中国产电动车销量6月下降24.2%</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/18/n10154324.md#1" target="_blank">杨宁：中共大年期间洗脑国人始于延安时期</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/15/n10394634.md#1" target="_blank">共产暴政录：抢教堂庙宇的献堂献庙</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/4/n10688678.md#1" target="_blank">摆脱人生困境 美国女子重拾幸福</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387867.md#1">如何把坏事变好事？谈随遇而安</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/8/n12676763.md#1">【元曲大家】白朴绝意仕进 词曲慰平生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385713.md#1">【古道人生】弟子216人 为何只有2人修成升天</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386426.md#1">没有手机的古代小孩都玩些什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390711.md#1">【未解之谜】蕴含地外元素可自主移动？贝茨球之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393064.md#1">【时事金扫描】俄中将司令被斩首 朝兵误击俄军</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14393018.md#1">【菁英论坛】叙利亚前途未卜 全球变局刚刚开始</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392314.md#1">【军事情报局】朝鲜12军徒步进攻 被乌军暴打</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391556.md#1">为何木卫一上火山持续喷发 NASA解开44年谜团</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391897.md#1">成都数千人政府大楼外抗议 逼停火葬场项目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391137.md#1">沈舟：中共低调军演 泄露低端攻台计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391280.md#1">传克里斯伊凡在《复仇者联盟5》演“游牧者”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391336.md#1">相信裘莉与彼特合演会大赚 制片人出巨额片酬</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391786.md#1">《破·地狱》港票房5.5亿台币 观影逾200万人次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391644.md#1">中山美穗猝逝 获日本唱片大奖颁发特别功劳奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392231.md#1">被巨额报价邀演新片 彼特拒绝与裘莉银幕重聚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391288.md#1">有使用暖气的看过来 专家教你用这招省钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386475.md#1">赚百万美元不是梦 投资ETF有哪些好处？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391784.md#1">7种高钠地雷食物 不只伤肾还易得糖尿病</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388423.md#1">吃三食材让大脑年轻11岁 分享超级食谱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391759.md#1">为什么天气寒冷时 排尿频率会增加？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/18/n14393701.htm">特斯拉中国工厂负责人宋钢被报离职</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393701.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
